--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
-    <link rel="stylesheet" href="{{ " /assets/main.css" | relative_url }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ " /feed.xml" |
-        relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}"
+        href="{{ '/feed.xml' | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,10 +21,10 @@
 
     <header class="site-header">
         <div class="header-wrapper">
-            <a class="site-title" href="{{ " /" | relative_url }}">{{ site.title | escape }}</a>
+            <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
             <nav class="site-nav">
-                <a href="{{ " /" | relative_url }}" class="nav-link">Home</a>
-                <a href="{{ " /about" | relative_url }}" class="nav-link">About</a>
+                <a href="{{ '/' | relative_url }}" class="nav-link">Home</a>
+                <a href="{{ '/about' | relative_url }}" class="nav-link">About</a>
             </nav>
         </div>
     </header>
