Enhance blog design: hero banner, tags page, broken links fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,14 @@
 
     <footer class="site-footer">
         <div class="footer-wrapper">
-            <p>&copy; {{ 'now' | date: "%Y" }} {{ site.author.name }}. All rights reserved.</p>
+            <p>&copy; {{ 'now' | date: "%Y" }} {{ site.author }}. All rights reserved.</p>
+            <div class="social-links">
+                <a href="https://github.com/laxman-sharma" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.linkedin.com/in/laxman-sharma-328b2659" target="_blank"
+                    rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://www.toptal.com/resume/laxman-sharma" target="_blank"
+                    rel="noopener noreferrer">Toptal</a>
+            </div>
         </div>
     </footer>
 
