--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
         rel="stylesheet">
+
+    {% if site.google_adsense != "" %}
+    <script async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-{{ site.google_adsense }}"
+        crossorigin="anonymous"></script>
+    {% endif %}
 </head>
 
 <body>
@@ -37,7 +43,8 @@
 
     <footer class="site-footer">
         <div class="footer-wrapper">
-            <p>&copy; {{ 'now' | date: "%Y" }} {{ site.author.name }}. All rights reserved.</p>
+            <p>&copy; {{ 'now' | date: "%Y" }} {{ site.author.name }}. All rights reserved. | <a
+                    href="{{ '/privacy' | relative_url }}">Privacy Policy</a></p>
             <div class="social-links">
                 <a href="https://github.com/laxman-sharma" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <a href="https://www.linkedin.com/in/laxman-sharma-328b2659" target="_blank"
