Implement SEO enhancements: structured data, Twitter Cards, and social metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@laxman_sharma">
+    <meta name="twitter:creator" content="@laxman_sharma">
+
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}"
         href="{{ '/feed.xml' | relative_url }}">
