Add DSA series content: Module pages, Stock II solution, and educational images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
 
+    <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}"
         href="{{ '/feed.xml' | relative_url }}">
@@ -34,6 +35,7 @@
             <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
             <nav class="site-nav">
                 <a href="{{ '/' | relative_url }}" class="nav-link">Home</a>
+                <a href="{{ '/dsa/' | relative_url }}" class="nav-link">DSA</a>
                 <a href="{{ '/about' | relative_url }}" class="nav-link">About</a>
             </nav>
         </div>
